# furachat

./: .gitignore  README.md  TUTORIEL.md
client/: index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  config.ts  main.tsx  vite-env.d.ts
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/src/: main.rs
client/src/components/: ChannelSidebar.module.css  ChannelSidebar.tsx  ChatArea.module.css  ChatArea.tsx  ContactBar.module.css  ContactBar.tsx  ForumView.module.css  ForumView.tsx  LoginScreen.module.css  LoginScreen.tsx  MainLayout.module.css  MainLayout.tsx  MemberList.module.css  MemberList.tsx  ProfilePanel.module.css  (+7 more)
server/: Cargo.toml
server/src/: config.rs  error.rs  main.rs
server/src/api/: auth_routes.rs  badge_routes.rs  channel_routes.rs  forum_routes.rs  friend_routes.rs  health_routes.rs  invitation_routes.rs  message_routes.rs  mod.rs  moderation_routes.rs  role_routes.rs  server_routes.rs  sticker_routes.rs  upload_helpers.rs  upload_routes.rs  user_routes.rs
server/src/auth/: jwt.rs  middleware.rs  mod.rs  password.rs
server/src/db/: migrations.rs  mod.rs  pool.rs
server/src/db/queries/: channels.rs  forum.rs  friends.rs  invitations.rs  messages.rs  mod.rs  moderation.rs  roles.rs  servers.rs  stickers.rs  users.rs
server/src/models/: channel.rs  forum.rs  invitation.rs  message.rs  mod.rs  permissions.rs  role.rs  server.rs  user.rs
server/src/storage/: archiver.rs  mod.rs
server/src/webrtc/: mod.rs  signaling.rs
server/src/ws/: connection.rs  events.rs  handlers.rs  hub.rs  mod.rs
(+8 files in other folders)
