[package]
name = "furachat-server"
version = "1.0.0"
edition = "2021"
description = "FuraChat — Serveur de messagerie instantanée auto-hébergé"

[dependencies]
# Framework web async
axum = { version = "0.7", features = ["multipart", "ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Base de données SQLite
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"

# Sérialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Authentification
jsonwebtoken = "9"
argon2 = "0.5"

# Identifiants uniques
uuid = { version = "1", features = ["v4", "serde"] }

# Date et heure
chrono = { version = "0.4", features = ["serde"] }

# Journalisation
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilitaires
rand = "0.8"
futures-util = "0.3"
libc = "0.2"
