[package]
name = "furachat-desktop"
version = "1.0.0"
edition = "2021"
description = "FuraChat — Client desktop Tauri"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
